@@ -1,7 +1,42 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/metareg.R
 \name{metareg}
 \alias{metareg}
 \title{Fixed and random effects model for meta-analysis}
-\usage{metareg(data, N, verbose="Y", prefixb="b", prefixse="se")}
+\usage{
+metareg(data, N, verbose = "Y", prefixb = "b", prefixse = "se")
+}
+\arguments{
+\item{data}{Data frame to be used.}
+
+\item{N}{Number of studies.}
+
+\item{verbose}{A control for screen output.}
+
+\item{prefixb}{Prefix of estimate; default value is "b".}
+
+\item{prefixse}{Prefix of standard error; default value is "se".
+The function accepts a wide format data with estimates as \eqn{b1,...,bN}
+and standard errors as \eqn{se1,...,seN}. More generally, they can be specified
+by prefixes in the function argument.}
+}
+\value{
+The returned value is a data frame with the following variables:
+\describe{
+  \item{p_f}{P value (fixed effects model)}
+  \item{p_r}{P value (random effects model)}
+  \item{beta_f}{regression coefficient}
+  \item{beta_r}{regression coefficient}
+  \item{se_f}{standard error}
+  \item{se_r}{standard error}
+  \item{z_f}{z value}
+  \item{z_r}{z value}
+  \item{p_heter}{heterogeneity test p value}
+  \item{i2}{\eqn{I^2}{I^2} statistic}
+  \item{k}{No of tests used}
+  \item{eps}{smallest double-precision number}
+}
+}
 \description{
 Given \eqn{k=n} studies with \eqn{b_1, ..., b_N} being \eqn{\beta}'s and
 \eqn{se_1, ..., se_N} standard errors from regression, the fixed effects
@@ -20,36 +55,8 @@ and \eqn{se_r=\sqrt(1/w_c)}{se_r=sqrt(1/wc)}, leading to a z-statistic
 \eqn{z_r=\beta_r/se_r} and a p-value \eqn{p_r=2*pnorm(-abs(z_r))}. Moreover, a
 p-value testing for heterogeneity is \eqn{p_{heter}=pchisq(q_w,k-1,lower.tail=FALSE)}.
 }
-
-\arguments{
- \item{data}{Data frame to be used}
- \item{N}{Number of studies}
- \item{verbose}{A control for screen output}
- \item{prefixb}{Prefix of estimate; default value is "b"}
- \item{prefixse}{Prefix of standard error; default value is "se"}
-The function accepts a wide format data with estimates as \eqn{b1,...,bN}
-and standard errors as \eqn{se1,...,seN}. More generally, they can be specified
-by prefixes in the function argument.
-}
-
-\value{
-The returned value is a data frame with the following variables:
- \item{p_f}{P value (fixed effects model)}
- \item{p_r}{P value (random effects model)}
- \item{beta_f}{regression coefficient}
- \item{beta_r}{regression coefficient}
- \item{se_f}{standard error}
- \item{se_r}{standard error}
- \item{z_f}{z value}
- \item{z_r}{z value}
- \item{p_heter}{heterogeneity test p value}
- \item{i2}{\eqn{I^2}{I^2} statistic}
- \item{k}{No of tests used}
- \item{eps}{smallest double-precision number}
-}
-\section{References}{
-JPT Higgins, SG Thompson, JJ Deeks, DG Altman. Measuring inconsistency in meta-analyses. BMJ 
-327:557-60
+\note{
+Adapted from a SAS macro, 23-7-2009 MRC-Epid JHZ
 }
 \examples{
 \dontrun{
@@ -59,7 +66,12 @@ metareg(abc,3)
 abc2 <- data.frame(b1=c(1,2),se1=c(2,4),b2=c(2,3),se2=c(4,6),b3=c(3,4),se3=c(6,8))
 print(metareg(abc2,3))
 }
+
 }
-\author{Shengxu Li, Jing Hua Zhao}
-\note{Adapted from a SAS macro}
+\references{
+JPT Higgins, SG Thompson, JJ Deeks, DG Altman. Measuring inconsistency in meta-analyses. BMJ 327:557-60
+}
+\author{
+Shengxu Li, Jing Hua Zhao
+}
 \keyword{models}
