@@ -1,48 +1,33 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/mtdt.R
 \name{mtdt}
 \alias{mtdt}
 \title{Transmission/disequilibrium test of a multiallelic marker}
-\usage{mtdt(x,n.sim=0)}
-\description{
-This function calculates transmission-disequilibrium statistics involving
-multiallelic marker.
-
-Inside the function are tril and triu used to obtain lower and upper triangular
-matrices.
+\usage{
+mtdt(x, n.sim = 0)
 }
 \arguments{
-\item{x}{the data table}
-\item{n.sim}{the number of simulations}
-}
+\item{x}{the data table.}
 
+\item{n.sim}{the number of simulations.}
+}
 \value{
 It returned list contains the following components:
-\item{SE}{Spielman-Ewens Chi-square from the observed data}
-\item{ST}{Stuart or score Statistic from the observed data}
-\item{pSE}{the simulated p value}
-\item{sSE}{standard error of the simulated p value}
-\item{pST}{the simulated p value}
-\item{sST}{standard error of the simulated p value}
+\describe{
+  \item{SE}{Spielman-Ewens Chi-square from the observed data}
+  \item{ST}{Stuart or score Statistic from the observed data}
+  \item{pSE}{the simulated p value}
+  \item{sSE}{standard error of the simulated p value}
+  \item{pST}{the simulated p value}
+  \item{sST}{standard error of the simulated p value}
 }
-
-\section{References}{
-Miller MB (1997) Genomic scanning and the transmission/disequilibrium test: 
-analysis of error rates. Genet. Epidemiol. 14:851-856
-
-Sham PC (1997) Transmission/disequilibrium tests for multiallelic loci. 
-Am. J. Hum. Genet. 61:774-778
-
-Spielman RS, Ewens WJ (1996) The TDT and other family-based tests for
-linkage disequilibrium and association. Am. J. Hum. Genet. 59:983-989
-
-Zhao JH, Sham PC, Curtis D (1999) A program for the Monte Carlo evaluation 
-of significance of the extended transmission/disequilibrium test. 
-Am. J. Hum. Genet. 64:1484-1485
-
 }
-\seealso{
-\code{\link[gap]{bt}}
+\description{
+This function calculates transmission-disequilibrium statistics involving multiallelic marker.
 }
-
+\details{
+Inside the function are tril and triu used to obtain lower and upper triangular matrices.
+}
 \examples{
 \dontrun{
 # Copeman et al (1995) Nat Genet 9: 80-5
@@ -64,6 +49,26 @@ x <- matrix(c(0,0, 0, 2, 0,0, 0, 0, 0, 0, 0, 0,
 
 mtdt(x)
 }
+
 }
-\author{Mike Miller, Jing Hua Zhao}
+\references{
+Miller MB (1997) Genomic scanning and the transmission/disequilibrium test: 
+analysis of error rates. Genet. Epidemiol. 14:851-856
+
+Sham PC (1997) Transmission/disequilibrium tests for multiallelic loci. 
+Am. J. Hum. Genet. 61:774-778
+
+Spielman RS, Ewens WJ (1996) The TDT and other family-based tests for
+linkage disequilibrium and association. Am. J. Hum. Genet. 59:983-989
+
+Zhao JH, Sham PC, Curtis D (1999) A program for the Monte Carlo evaluation 
+of significance of the extended transmission/disequilibrium test. 
+Am. J. Hum. Genet. 64:1484-1485
+}
+\seealso{
+{\code{\link[gap]{bt}}}
+}
+\author{
+Mike Miller, Jing Hua Zhao
+}
 \keyword{models}
