@@ -1,7 +1,8 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.3
-14-05-2022	Add circos.mhtplot2(); Clarificaiton of YAML declaration in gap.Rmd
+29-05-2022	Redocument klem, metareg, mtdt, plot.hap.score, print.hap.score
+		Add circos.mhtplot2(); Clarificaiton of YAML declaration in gap.Rmd
 		Add cex.axis to axis(1) in mhtplot.trunc() & notes on adjustment data
 		Mask circos.cnvplot due to excessive running time.
 
